Add api to get voting info based on validators
