# config/swagger.json
@@ -313,6 +313,39 @@
                     }
                 }
             }
+        },
+        "/gov/votes/{id}/validators-info": {
+            "get": {
+                "tags": [
+                    "gov"
+                ],
+                "summary": "get validators votes for proposal by proposal id",
+                "description": "",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
