# main.py
@@ -83,6 +83,11 @@ def vote(id):
     proposal_service = ProposalService()
     return jsonify(proposal_service.get_vote(id))
 
+@app.route('/gov/votes/<id>/validators-info')
+def vote_based_on_validators(id):
+    proposal_service = ProposalService()
+    return jsonify({'delegators': proposal_service.get_delegators_votes_info_for_proposal(id)})
+
 
 @app.after_request
 def add_network_to_response(response):
